<resources>
    <string name="app_name">MasterDetail Flow Kotlin Test</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="surface">Surface</string>
    <string name="facade">facade</string>
    <string name="text_desc">DESCRIPTION TEXTDESCRIPTION DESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXTDESCRIPTION TEXT</string>
    <string name="take_picture">Take picture</string>
    <string name="import_button">Import</string>
    <string name="enter_property_surface">Enter property surface</string>
    <string name="enter_number_of_rooms">Enter number of rooms</string>
    <string name="enter_desc">Enter property description here</string>
    <string name="enter_number_of_bathrooms">Enter number of bathrooms</string>
    <string name="enter_poi">Enter POI</string>
    <string name="enter_number_of_bedrooms">Enter number of bedrooms</string>
    <string name="property_type">Property type</string>
    <string name="map_item">map_item</string>
    <string name="currency_item">currency_item</string>
    <string name="rationale_location">Permission for location is required for the application to function fully</string>
    <string name="rationale_camera_and_storage">Multiple permissions for are required for the application to function fully</string>
    <string name="my_position">My Position</string>
    <string name="agent_name">Agent name</string>
    <string name="property_description">Property description</string>
    <string name="school">School</string>
    <string name="playground">Playground</string>
    <string name="shop">Shops</string>
    <string name="public_transports">Public transportation</string>
    <string name="parking">Parking</string>
    <string name="Daycare">Daycare</string>
    <string name="daycare">Daycare</string>
    <string name="shops">Shops</string>
    <string name="train">Train</string>
    <string name="poi">POI</string>
    <string name="point_of_interests">Point Of Interests</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="price_only">Price</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_picture">Add Picture</string>
    <string name="template_detail_title">Type in Neighborhood for price</string>
    <string name="rooms">Rooms</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="country">Country</string>
    <string name="browse_files">Browse files</string>
    <string name="open_camera">Open Camera</string>
    <string name="sold">SOLD!</string>
    <string name="search_item">search</string>
    <string name="Edit">edit_item</string>
    <string name="Mortgage_calculator">mortgage calculator</string>

    <!-- Mortgage calculator fragment -->
    <string name="currency_sign">Currency sign</string>
    <string name="price">Property price</string>
    <string name="years">Mortgage length</string>
    <string name="rate">Mortgage rate</string>
    <string name="down_payment">Down payment</string>
    <string name="minus_vector_image_legend">Minus vector image legend</string>
    <string name="add_vector_image_legend">Add vector image legend</string>
    <string name="slider_to_modify_the_mortgage_rate_from_2_to_6">Slider to modify the mortgage rate from 2 to 6</string>
    <string name="slider_to_modify_the_length_of_the_mortgage_from_5_to_30_years">Slider to modify the length of the mortgage from 5 to 30 years</string>
    <string name="monthly_payment">Monthly payment</string>
    <string name="total_investment_cost">The total investment cost is $%1d / €%2d</string>
    <string name="mortgage_length_in_years">"%1d years"</string>


</resources>