<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_property_nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addProperty.AddPropertyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinner_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/spinner_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:drawableStart="@drawable/ic_city"
                android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                android:drawablePadding="16dp"
                android:focusable="false"
                android:hint="@string/property_type"
                android:inputType="text"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:spinnerMode="dialog"/>


        </com.google.android.material.textfield.TextInputLayout>


        <EditText
            android:id="@+id/agent_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_agent_focused_icon"
            android:drawablePadding="16dp"
            android:hint="@string/agent_name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/spinner_text_input_layout"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/agent_name_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/row_item_detail_view_property_picture"/>

        <Button
            android:id="@+id/add_picture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/add_picture"
            android:backgroundTint="@color/base_purple"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_view"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/property_description_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/property_description"
            app:layout_constraintTop_toBottomOf="@id/add_picture_button">

            <EditText
                android:id="@+id/property_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:inputType="text"/>


        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/price_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_price_focused_icon"
            android:drawablePadding="16dp"
            android:hint="@string/price"
            android:inputType="number"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/property_description_edit_text_layout"
             />


        <EditText
            android:id="@+id/surface_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_surface_focused_icon"
            android:drawablePadding="16dp"
            android:hint="@string/surface"
            android:inputType="number"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_edit_text" />

        <EditText
            android:id="@+id/rooms_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_room_focused_icon"
            android:drawablePadding="16dp"
            android:hint="@string/rooms"
            android:inputType="numberDecimal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surface_edit_text" />

        <EditText
            android:id="@+id/bedroom_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_bedroom_focused_icon"
            android:drawablePadding="16dp"
            android:hint="@string/bedrooms"
            android:inputType="numberDecimal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rooms_edit_text" />

        <EditText
            android:id="@+id/bathroom_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_bathroom_focused_icon"
            android:drawablePadding="16dp"
            android:hint="@string/bathrooms"
            android:inputType="numberDecimal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bedroom_edit_text" />

        <TextView
            android:id="@+id/POI_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/point_of_interests"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bathroom_edit_text" />


        <include
            android:id="@+id/checkbox"
            layout="@layout/checkbox_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/POI_Title"/>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />


        <EditText
            android:id="@+id/address_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_address_focused_icon"
            android:drawablePadding="16dp"
            android:hint="@string/address"
            android:inputType="text"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/property_description_edit_text_layout" />


        <EditText
            android:id="@+id/city_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_address_focused_icon"
            android:drawablePadding="16dp"
            android:hint="@string/city"
            android:inputType="text"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/address_edit_text" />

        <EditText
            android:id="@+id/postal_code_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_address_focused_icon"
            android:drawablePadding="16dp"
            android:hint="@string/postal_code"
            android:inputType="text"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/city_edit_text" />

        <EditText
            android:id="@+id/country_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_address_focused_icon"
            android:drawablePadding="16dp"
            android:hint="@string/country"
            android:inputType="text"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/postal_code_edit_text" />

        <EditText
            android:id="@+id/neighborhood_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_address_focused_icon"
            android:drawablePadding="16dp"
            android:hint="@string/neighborhood"
            android:inputType="text"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/country_edit_text" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>